--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
   />
   <div *ngIf="customer">  
     Name of Customer : {{customer.firstName}} {{customer.lastName}}
+    {{customer.email}}  {{customer.phoneNo}}
   </div>
 </div>
 
